deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: jenkins-deployment
  namespace: jenkins
  uid: bb9d67da-53fe-4442-a3bc-70bd833a5a94
  resourceVersion: '24147223'
  generation: 13
  creationTimestamp: '2022-04-01T04:22:48Z'
  labels:
    app: jenkins
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jenkins
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: jenkins
    spec:
      volumes:
        - name: jenkins-vol
          persistentVolumeClaim:
            claimName: jenkins-pvc
      containers:
        - name: jenkins
          image: jenkins/jenkins:lts
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          volumeMounts:
            - name: jenkins-vol
              mountPath: /var/jenkins_home
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext:
        runAsUser: 0
