service.yaml
kind: Service
apiVersion: v1
metadata:
  name: jenkins-service
  namespace: jenkins
spec:
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30031
  selector:
    app: jenkins
  type: NodePort
