ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: jenkins-ingress
  namespace: jenkins
spec:
  tls:
    - hosts:
        - jenkins.mydomain.com
      secretName: tls-jenkins
  rules:
    - host: jenkins.mydomain.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jenkins-service
                port:
                  number: 8080
